--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,6 +25,7 @@ django-contrib-postgres==0.0.1
 django-cors-headers==3.10.1
 django-environ==0.8.1
 django-etc==1.3.1
+django-extensions==3.1.5
 django-hitcount==1.3.5
 django-ipware==4.0.2
 django-js-asset==2.0.0
@@ -60,6 +61,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.8.0
 pycparser==2.21
+pydot==1.4.2
 PyJWT==2.3.0
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
