--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,9 +32,10 @@ django-js-asset==2.0.0
 django-oauth-toolkit==2.0.0
 django-redis==5.2.0
 django-rest-auth==0.9.5
-django-rest-swagger==2.2.0
+django-rest-passwordreset==1.2.1
 djangorestframework==3.12.4
 drf-social-oauth2==1.2.1
+drf-yasg==1.20.0
 ecdsa==0.17.0
 factory-boy==3.2.1
 Faker==13.3.4
@@ -42,6 +43,7 @@ hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
+inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.3
 jwcrypto==1.3.1
@@ -75,6 +77,8 @@ requests==2.26.0
 requests-oauthlib==1.3.1
 rest-framework-generic-relations==2.1.0
 rsa==4.8
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 service-identity==21.1.0
 simplejson==3.17.6
 six==1.16.0
