--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,9 @@
 FROM python:3.8
-ENV PYTHONDONTWRITEBYTECODE 1
+
 ENV PYTHONUNBUFFERED 1
-COPY . /app
-WORKDIR /app
-RUN pip3 install -r requirements.txt
-RUN python manage.py makemigrations
-RUN python manage.py 
-CMD python manage.py runserver
+WORKDIR /app/api
+COPY requirements.txt ./
+COPY . ./
+RUN pip install -r requirements.txt
+CMD python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000
 EXPOSE 8000
