--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,5 @@ RUN pip install -r requirements.txt
 CMD python manage.py makemigrations && \
     python manage.py migrate && \
     python manage.py createsuperusercustom && \
-    python manage.py createauthapplication && \
     python manage.py runserver 0.0.0.0:8000 
-EXPOSE 8000
+EXPOSE 8000 6379
