--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,9 +7,8 @@ services:
         build:
             context: ./backend/
             dockerfile: Dockerfile
-        # volumes:
-        #     - .:/app
-        #     - media_volume:/app/media
+        volumes:
+            - media:/app/api/media
         ports:
             - "8000:8000"
         env_file:
@@ -18,25 +17,26 @@ services:
             - database
         links:
             - database:database
+            - redis:redis
         networks:
             - recipeapp
     
-    # frontend:
-    #     container_name: frontend
-    #     build:
-    #         context: ./frontend/
-    #         dockerfile: Dockerfile
-    #     # restart: on-failure
-    #     env_file:
-    #         - ./frontend/.env
-    #     networks:
-    #         - recipeapp
-    #     ports:
-    #         - "3000:3000"
-    #     depends_on:
-    #         - database
-    #         - redis
-    #         - backend
+    frontend:
+        container_name: frontend
+        build:
+            context: ./frontend/
+            dockerfile: Dockerfile
+        # restart: on-failure
+        env_file:
+            - ./frontend/.env
+        networks:
+            - recipeapp
+        ports:
+            - "3000:3000"
+        depends_on:
+            - database
+            - redis
+            - backend
 
     database:
         restart: always
@@ -68,4 +68,4 @@ networks:
 
 volumes:
     postgres_data:
-    media_volume:
+    media:
